--- a/views/index.pug
+++ b/views/index.pug
@@ -3,21 +3,39 @@ include defaults/mixins.pug
 block content
     .container
         .card__preview
-            .card__preview--number XXXX XXXX XXXX XXXX
+            .card__preview--number #### #### #### ####
             .card__preview--holder Jan Kowalski
         form.card__form
-            input.card__form--input(type="text" placeholder="Card number")
-            label(for="card__form--select")
-            select#card__form--select
-                option 01
-                option 02
-                option 03
-                option 04
-                option 05
-                option 06
-                option 07
-                option 08
-                option 09
-                option 10
-                option 11
-                option 12
+            label(for="card__form--input_card_number") Card Number
+            input.card__form--input_card_number(type="text" placeholder="Card number")
+
+            label(for="card__form--input_card_name") Card Name
+            input.card__form--input_card_name(type="text" placeholder="Card Name")
+
+            label(for="card__form--expiration_date") Expiration Date
+            select#card__form--select_month
+                option(value="" disabled selected) Month
+                option(value="01") January
+                option(value="02") February
+                option(value="03") March
+                option(value="04") April
+                option(value="05") May
+                option(value="06") June
+                option(value="07") July
+                option(value="08") August
+                option(value="09") September
+                option(value="10") October
+                option(value="11") November
+                option(value="12") December
+
+            select#card__form--select_year
+                option(value="" disabled selected) Year
+                option(value="2024") 2024
+                option(value="2025") 2025
+                option(value="2026") 2026
+                option(value="2027") 2027
+                option(value="2028") 2028
+                option(value="2029") 2029
+
+            label(for="card__form--input_cvv") CVV
+            input.card__form--input_cvv(type="text" placeholder="CVV")
