feat(expiration date): add html and js to preview and modify card's expiration date

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,9 @@ block content
         .card__preview
             .card__preview--number #### #### #### ####
             .card__preview--holder Jan Kowalski
+            .card__preview--expiration
+                p Expires
+                p.card__preview--expiration-date MM/YY
         form.card__form
             label(for="card__form--input_card_number") Card Number
             input.card__form--input_card_number(type="text" placeholder="Card number")
