feat(form): add submit button

--- a/views/index.pug
+++ b/views/index.pug
@@ -42,3 +42,5 @@ block content
 
             label(for="card__form--input_cvv") CVV
             input.card__form--input_cvv(type="text" placeholder="CVV")
+
+            button(type="submit" class="card__form--submit") Submit
