--- a/views/index.pug
+++ b/views/index.pug
@@ -1,54 +1,45 @@
 extends defaults/layout.pug
 include defaults/mixins.pug
+
 block content
     .container
-        +addPicture('background.jpg','background-image','position:relative;top: -100px;width:100%;max-width:400px;border-radius:25px;')
-        .card__preview
-                .card__preview--number #### #### #### ####
-                .card__preview--wrapper
-                    .card__preview--holder 
-                        p Card holder 
-                        p.card__holder--holder_value JAN KOWALSKI
-                    .card__preview--expiration
-                        p Expires
-                        p.card__preview--expiration-date MM/YY
-        form.card__form
-            label(for="card__form--input_card_number") Card Number
-            input.card__form--input_card_number(type="text")
+        .background_image
 
-            label(for="card__form--input_card_name") Card Name
-            input.card__form--input_card_name(type="text")
+        .card_preview
+            .card_preview--number #### #### #### ####
+            .card_preview--wrapper
+                .card_preview--holder 
+                    p Card holder 
+                    p.card__holder--holder_value JAN KOWALSKI
+                .card_preview--expiration
+                    p Expires
+                    p.card_preview--expiration-date MM/YY
+            .card_preview--cvv
+                div CVV: ###
 
-            div.wrapper
-                div.select-wrapper
-                    label(for="card__form--expiration_date") Expiration Date
-                    div
-                        select#card__form--select_month
+        form.card_form
+            label(for="card_form--input_card_number") Card Number
+            input.card_form--input_card_number(type="text")
+
+            label(for="card_form--input_card_name") Card Name
+            input.card_form--input_card_name(type="text")
+
+            .details_wrapper
+                .select_wrapper
+                    label(for="card_form--expiration_date") Expiration Date
+                    .select_container
+                        select#card_form--select_month
                             option(value="" disabled selected) Month
-                            option(value="01") January
-                            option(value="02") February
-                            option(value="03") March
-                            option(value="04") April
-                            option(value="05") May
-                            option(value="06") June
-                            option(value="07") July
-                            option(value="08") August
-                            option(value="09") September
-                            option(value="10") October
-                            option(value="11") November
-                            option(value="12") December
-
-                        select#card__form--select_year
+                            each month, index in ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']
+                                option(value=(index + 1).toString().length === 2 ? index + 1 : '0' + (index + 1))= month
+                        
+                        select#card_form--select_year
                             option(value="" disabled selected) Year
-                            option(value="2024") 2024
-                            option(value="2025") 2025
-                            option(value="2026") 2026
-                            option(value="2027") 2027
-                            option(value="2028") 2028
-                            option(value="2029") 2029
+                            each year in [2024, 2025, 2026, 2027, 2028, 2029]
+                                option(value=year)= year
 
-                div.cvv-wrapper
-                    label(for="card__form--input_cvv") CVV
-                    input.card__form--input_cvv(type="text")
+                .cvv_wrapper
+                    label(for="card_form--input_cvv") CVV
+                    input.card_form--input_cvv(type="text" maxlength="3")
 
-            button(type="submit" class="card__form--submit") Submit
+            button.card_form--submit(type="submit") Submit
